--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kejutan Horor</title>
+    <title>Main pou aja</title>
     <style>
         body {
             display: flex;
@@ -11,7 +11,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #000; /* Latar belakang hitam untuk suasana horor */
+            background-color: #0f69f0; /* Latar belakang hitam untuk suasana horor */
             margin: 0;
         }
 
@@ -28,7 +28,7 @@
             padding: 15px 30px;
             font-size: 1.2em;
             cursor: pointer;
-            background-color: #ff0000;
+            background-color: #0bb6eb;
             color: white;
             border: none;
             border-radius: 5px;
@@ -37,7 +37,7 @@
 </head>
 <body>
 
-    <button id="tombol-kejutan">Pencet Ini Kalo Berani!</button>
+    <button id="tombol-kejutan">Pencet bakalan muncul anak ayam</button>
     
     <!-- Ganti 'url_gambar_setan.jpg' dengan path file gambar kamu atau URL gambar setan -->
     <img id="foto-setan" src="c4ef8a813deb9ec2d09d1a1a98c89405.jpg" alt="Foto Setan">
@@ -58,3 +58,4 @@
 
 </body>
 </html>
+
