--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <button id="tombol-kejutan">Pencet bakalan muncul anak ayam</button>
     
     <!-- Ganti 'url_gambar_setan.jpg' dengan path file gambar kamu atau URL gambar setan -->
-    <img id="foto-setan" src="WhatsApp Image 2025-11-26 at 23.14.17.jpg" alt="Foto Setan">
+    <img id="foto-setan" src="WhatsApp Image 2025-11-26 at 23.14.17.jpeg" alt="Foto Setan">
 
     <script>
         // Ambil elemen tombol dan gambar
@@ -58,5 +58,6 @@
 
 </body>
 </html>
+
 
 
