--- a/index.html
+++ b/index.html
@@ -11,17 +11,14 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #0f69f0; /* Latar belakang hitam untuk suasana horor */
+            background-color: #0f69f0;
             margin: 0;
         }
 
-        #foto-setan {
-            /* Sembunyikan gambar secara default */
-            display: none; 
+        .foto-setan {
+            display: none;
             max-width: 100%;
             max-height: 100vh;
-            /* Tambahkan efek transisi atau animasi jika mau */
-            /* transition: opacity 0.5s ease-in-out; */
         }
 
         #tombol-kejutan {
@@ -38,28 +35,33 @@
 <body>
 
     <button id="tombol-kejutan">Pencet bakalan muncul anak ayam</button>
-    
-    <!-- Ganti 'url_gambar_setan.jpg' dengan path file gambar kamu atau URL gambar setan -->
-    <img id="foto-setan" src="WhatsApp Image 2025-11-26 at 23.18.28.jpeg" alt="Foto Setan">
+
+    <!-- 3 gambar yang bakal dipilih secara random -->
+    <img class="foto-setan" id="foto1" src="WhatsApp Image 2025-11-26 at 23.14.17.jpeg">
+    <img class="foto-setan" id="foto2" src="WhatsApp Image 2025-11-26 at 23.18.28.jpeg">
+    <img class="foto-setan" id="foto3" src="c4ef8a813deb9ec2d09d1a1a98c89405.jpg">
 
     <script>
-        // Ambil elemen tombol dan gambar
         const tombolKejutan = document.getElementById('tombol-kejutan');
-        const fotoSetan = document.getElementById('foto-setan');
 
-        // Tambahkan event listener untuk klik tombol
+        // Ambil semua elemen gambar
+        const semuaGambar = document.querySelectorAll('.foto-setan');
+
         tombolKejutan.addEventListener('click', () => {
-            // Saat tombol diklik, ubah properti display gambar menjadi 'block' (terlihat)
-            fotoSetan.style.display = 'block';
-            // Opsional: Sembunyikan tombol setelah diklik
+
+            // Sembunyikan semua gambar dulu
+            semuaGambar.forEach(img => img.style.display = 'none');
+
+            // Ambil index random 0–2
+            const randomIndex = Math.floor(Math.random() * semuaGambar.length);
+
+            // Tampilkan gambar random
+            semuaGambar[randomIndex].style.display = 'block';
+
+            // Sembunyikan tombol
             tombolKejutan.style.display = 'none';
         });
     </script>
 
 </body>
 </html>
-
-
-
-
-
