--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <img class="foto-setan" id="foto1" src="WhatsApp Image 2025-11-26 at 23.14.17.jpeg">
     <img class="foto-setan" id="foto2" src="WhatsApp Image 2025-11-26 at 23.18.28.jpeg">
     <img class="foto-setan" id="foto3" src="c4ef8a813deb9ec2d09d1a1a98c89405.jpg">
+    <img class="foto-setan" id="foto3" src="c4ef8a813deb9ec2d09d1a1a98c89405.jpg">
+    <img class="foto-setan" id="foto3" src="c4ef8a813deb9ec2d09d1a1a98c89405.jpg">
+    <img class="foto-setan" id="foto3" src="c4ef8a813deb9ec2d09d1a1a98c89405.jpg">
 
     <script>
         const tombolKejutan = document.getElementById('tombol-kejutan');
@@ -61,19 +64,7 @@
             // Sembunyikan tombol
             tombolKejutan.style.display = 'none';
         });
-             });
-
-            tombolSembunyi.addEventListener('click', () => {
-            // Sembunyikan semua gambar
-            semuaGambar.forEach(img => img.style.display = 'none');
-
-            // Tampilkan tombol random lagi
-            tombolKejutan.style.display = 'block';
-            tombolSembunyi.style.display = 'none';
-        });
-        
     </script>
 
 </body>
 </html>
-
